--- a/package.json
+++ b/package.json
@@ -10,14 +10,30 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.65.0",
+    "@babel/standalone": "^7.28.4",
     "@fingerprintjs/fingerprintjs": "^4.6.2",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "canvas-confetti": "^1.9.3",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.23.22",
+    "lucide-react": "^0.545.0",
     "nanoid": "^5.1.6",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
