--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "typeRoots": ["./node_modules/@types", "./types"]
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "types/**/*.d.ts"],
-  "exclude": ["node_modules", "partykit/server.ts"]
+  "exclude": ["node_modules"]
 }
