--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "next": "15.5.4",
     "next-themes": "^0.4.6",
     "partykit": "^0.0.115",
+    "partyserver": "^0.0.75",
     "partysocket": "^1.1.6",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
