--- a/wrangler.toml
+++ b/wrangler.toml
@@ -4,9 +4,13 @@ compatibility_date = "2024-10-09"
 account_id = "b43bedffc180cea44aab504f7bf502ba"
 
 [[durable_objects.bindings]]
-name = "VIBE_SERVER"
+name = "VibeServer"
 class_name = "VibeServer"
 
 [[migrations]]
 tag = "v1"
 new_sqlite_classes = ["VibeServer"]
+
+# wrangler.toml (wrangler v3.88.0^)
+[observability.logs]
+enabled = true
