--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,13 @@
 CLIENT_ID=gx-vibeinthedark-litellm-client
 CLIENT_SECRET=your-client-secret-here
 
-# PartyKit Configuration
-# For local development, use localhost:1999 (PartyKit's default dev server port)
-# For production, use your deployed PartyKit URL (e.g., vibe-in-the-dark.yourname.partykit.dev)
-NEXT_PUBLIC_PARTYKIT_HOST=localhost:1999
+# Pusher Configuration (required for real-time game updates)
+# Sign up at https://dashboard.pusher.com/ and create a new Channels app
+# Free tier: 200k messages/day, 100 concurrent connections
+NEXT_PUBLIC_PUSHER_APP_KEY=your-app-key-here
+NEXT_PUBLIC_PUSHER_CLUSTER=us2
+PUSHER_APP_ID=your-app-id-here
+PUSHER_APP_SECRET=your-app-secret-here
 
 # Environment
 NODE_ENV=development
