--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"next dev\" \"partykit dev\"",
-    "dev:next": "next dev",
-    "dev:party": "partykit dev",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "deploy:party": "wrangler deploy",
     "lint": "eslint"
   },
   "dependencies": {
@@ -35,9 +32,8 @@
     "nanoid": "^5.1.6",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
-    "partykit": "^0.0.115",
-    "partyserver": "^0.0.75",
-    "partysocket": "^1.1.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "19.1.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.1.0",
@@ -53,7 +49,6 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
-    "concurrently": "^9.2.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.4",
     "tailwindcss": "^4",
