--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,12 @@
 CLIENT_ID=gx-vibeinthedark-litellm-client
 CLIENT_SECRET=your-client-secret-here
 
-# Pusher Configuration (required for real-time game updates)
-# Sign up at https://dashboard.pusher.com/ and create a new Channels app
-# Free tier: 200k messages/day, 100 concurrent connections
-NEXT_PUBLIC_PUSHER_APP_KEY=your-app-key-here
-NEXT_PUBLIC_PUSHER_CLUSTER=us2
-PUSHER_APP_ID=your-app-id-here
-PUSHER_APP_SECRET=your-app-secret-here
+# Supabase Configuration (required for real-time game updates)
+# Sign up at https://supabase.com and create a new project
+# Free tier: Generous limits for development and small-scale production
+NEXT_PUBLIC_SUPABASE_URL=https://your-project-ref.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
 # Environment
 NODE_ENV=development
